﻿0.1.3 [TBD]
[*] Add "|" to PoolSpecialConflict for PasswordGenerator.

0.1.2 [2019-01-22]
[*] Fix comments.
[*] Fix GeneratorFlag values.
[-] Drop JetBrains.Annotations .
[+] SourceLink support.

0.1.0 [2016-11-14]
[+] Initial release.