@@ -1,5 +1,7 @@
 ﻿0.1.3 [TBD]
 [*] Add "|" to PoolSpecialConflict for PasswordGenerator.
+[+] Tha package is built with nullable reference type annotations.
+[+] Add netstandard 2.1 support.
 
 0.1.2 [2019-01-22]
 [*] Fix comments.
